--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.rbkpro.javacf</groupId>
-	<artifactId>messenger</artifactId>
+	<artifactId>manager</artifactId>
 	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>messenger</name>
+	<name>manager</name>
 
 	<build>
-		<finalName>messenger</finalName>
+		<finalName>manager</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
